--- a/resources/css/ordenes.css
+++ b/resources/css/ordenes.css
@@ -1,9 +1,10 @@
 
-.tile{
+.orden{
 	max-width: 90%;
-	margin: 10px auto;
-	background-color: #eee;
-	padding: 8px;
+	margin: 20px auto;
+	padding: 8px; 
+	border: 2px solid #5755d9;
+	border-radius: 3px;
 
 }
 
@@ -16,4 +17,22 @@
 	font-size: 18px;
 	text-align: center;
 	max-width: 500px;
+}
+
+.acciones{
+	color:#fff;
+	text-align: center;
+	vertical-align: middle;
+	margin: 10px 0;
+}
+
+.table td, .table th {
+	border-bottom: .05rem solid #e7e9ed;
+	padding: 0px;
+}
+
+.cabecera-orden{
+	color:#5755d9;
+	padding: 0 10px;
+
 }
