--- a/resources/css/ordenes.css
+++ b/resources/css/ordenes.css
@@ -38,6 +38,7 @@
 .tabla-productos{
 	border-top: 1px solid #5755d9;
 	border-radius: 3;
+	display: none;
 }
 
 .tabla-productos tbody tr td{
@@ -50,10 +51,16 @@
 	vertical-align: middle;
 	margin: 10px 0;
 }
-
+.acciones .btn{
+	font-size: 20px;
+}
 .finalizar_orden{
 	color: green !important;
 }
 #form_aceptar_finalizar_orden{
 	display: inline;
+}
+
+.fa-eye-slash{
+	display: none;
 }
