--- a/resources/css/lista_clientes.css
+++ b/resources/css/lista_clientes.css
@@ -7,6 +7,8 @@
 	border-radius: 3px;*/
 	background-color: #f4f4f4;
 	line-height: 40px;
+	border: 1px solid #ccc;
+	border-radius: 3px;
 }
 
 .cliente-nombre{
@@ -42,6 +44,14 @@
 	line-height: 20px;
 	width: 100%;
 	white-space: pre-wrap;
+}
+
+
+
+#agregar-cliente{
+	position: fixed;
+	bottom: 20px;
+	right: 20px;
 }
 
 #no-hay-clientes{
