--- a/resources/css/header.css
+++ b/resources/css/header.css
@@ -27,3 +27,11 @@ body{
 	box-shadow: 0px 3px 13px 0px rgba(0,0,0,0.42);*/
 }
 
+.a-link{
+	color: #fff;
+	text-decoration: none;
+}
+.a-link:hover{
+	color: #fff;
+	text-decoration: none;
+}
