--- a/resources/css/lista_clientes.css
+++ b/resources/css/lista_clientes.css
@@ -5,7 +5,7 @@
 	padding: 0px; 
 /*	border: 2px solid #5755d9;
 	border-radius: 3px;*/
-	background-color: #f4f4f4;
+	background-color: #fff;
 	line-height: 40px;
 	border: 1px solid #ccc;
 	border-radius: 3px;
