--- a/resources/css/ordenes.css
+++ b/resources/css/ordenes.css
@@ -4,7 +4,7 @@
 	padding: 8px; 
 	border: 1px solid #ccc;
 	border-radius: 3px;
-	background-color: #f4f4f4;
+	background-color: #fff;
 }
 
 .cabecera-orden table{
