cambio de direccion

--- a/resources/css/abm_venta.css
+++ b/resources/css/abm_venta.css
@@ -10,3 +10,13 @@
 	background-color: #fff;
 	border: .05rem solid #caced7;
 }
+
+#selector_de_clientes{
+	display: inline-block;
+	width: calc(100% - 60px);
+}
+
+#agregar_nuevo_cliente{
+	display: inline;
+	float: right;
+}
