continuo con categorias

--- a/resources/css/categorias.css
+++ b/resources/css/categorias.css
@@ -1,5 +1,5 @@
 
-.cliente{
+.categoria{
 	max-width: 100%;
 	margin: 10px auto;
 	padding: 0px; 
@@ -11,7 +11,7 @@
 	border-radius: 3px;
 }
 
-.cliente-nombre{
+.categoria-nombre{
 	display: inline-block;
 	vertical-align: middle;
 	margin-left: 10px;
@@ -35,7 +35,8 @@
 	display: none;
 }
 
-.datos-cliente{
+
+.datos-categoria{
 	display: none;
 	text-align: left;
 	margin-left:20px;
@@ -43,17 +44,19 @@
 	line-height: 20px;
 	white-space: pre-wrap;
 }
-.datos-cliente tr td:nth-child(2){
+.datos-categoria tr td:nth-child(2){
 	padding-left: 20px;
 }
 
-#agregar-cliente{
+
+
+#agregar-categoria{
 	position: fixed;
 	bottom: 20px;
 	right: 20px;
 }
 
-#no-hay-clientes{
+#no-hay-categorias{
 	color: #fff;
 	margin: 0 auto;
 	margin-top: 30px;
