--- a/resources/css/header.css
+++ b/resources/css/header.css
@@ -127,5 +127,11 @@ body{
 	background-color: white;
 	padding: 8px; 
 	border: 1px solid #ccc;
-	border-radius: 3px;"
+	border-radius: 3px;
+	margin-bottom: 8px;
+}
+
+.chip{
+	color: #fff;
+	background-color: #5755d9;
 }
