--- a/resources/css/header.css
+++ b/resources/css/header.css
@@ -135,3 +135,8 @@ body{
 	color: #fff;
 	background-color: #5755d9;
 }
+.shadow{
+	-webkit-box-shadow: 0px 3px 13px 0px rgba(0,0,0,0.42);
+    -moz-box-shadow: 0px 3px 13px 0px rgba(0,0,0,0.42);
+    box-shadow: 0px 3px 13px 0px rgba(0,0,0,0.42);
+}
